test/classes/deitz/types/type_to_value_error.good
type_to_value_error.chpl:7: error: illegal assignment of type to value
